--- a/Concursus.Desktop/Concursus.Desktop.csproj
+++ b/Concursus.Desktop/Concursus.Desktop.csproj
@@ -22,6 +22,7 @@
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.6" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
+    <PackageReference Include="Projektanker.Icons.Avalonia.FontAwesome" Version="9.0.1" />
     <PackageReference Include="ReactiveUI" Version="19.5.39" />
   </ItemGroup>
 
